Compile against java 8